--- a/1.html
+++ b/1.html
@@ -7,7 +7,42 @@
     <script src="1.js"></script>
 </head>
 <body>
-
+<table align="center">
+    <tr>
+        <td class="small" colspan="5" id="content" style="text-align: right"></td>
+    </tr>
+    <tr>
+        <td  class="small" colspan="5" id="result" style="text-align: right"></td>
+    </tr>
+    <tr>
+        <td onclick="choose(this)">1</td>
+        <td onclick="choose(this)">2</td>
+        <td onclick="choose(this)">3</td>
+        <td onclick="choose(this)">+</td>
+        <td onclick="choose(this)">-</td>
+    </tr>
+    <tr>
+        <td onclick="choose(this)">4</td>
+        <td onclick="choose(this)">5</td>
+        <td onclick="choose(this)">6</td>
+        <td onclick="choose(this)">*</td>
+        <td onclick="choose(this)">/</td>
+    </tr>
+    <tr>
+        <td onclick="choose(this)">7</td>
+        <td onclick="choose(this)">8</td>
+        <td onclick="choose(this)">9</td>
+        <td onclick="choose(this)">(</td>
+        <td onclick="choose(this)">)</td>
+    </tr>
+    <tr>
+        <td onclick="choose(this)">AC</td>
+        <td onclick="choose(this)">0</td>
+        <td onclick="choose(this)">.</td>
+        <td onclick="choose(this)">Del</td>
+        <td onclick="choose(this)">=</td>
+    </tr>
+</table>
 
 </body>
 </html>
